test/errors/error14(3).sp
%t contains a ground subterm which is not domain element.
sorts
#s={f(a,b)}.
predicates
p(#s).
rules
p(f(X,c)).

